--- a/DanceCalc/m4d/Views/Song/AdvancedSearchForm.cshtml
+++ b/DanceCalc/m4d/Views/Song/AdvancedSearchForm.cshtml
@@ -172,7 +172,7 @@
                     @SortOrder("Tempo", filter.SortOrder)
                     @SortOrder("Dances", filter.SortOrder, "Dance Rating")
                     @SortOrder("Modified", filter.SortOrder, "Last Modified")
-                    @SortOrder("Create", filter.SortOrder, "When Added")
+                    @SortOrder("Created", filter.SortOrder, "When Added")
                 </div>
                 <div class="col-sm-offset-2 col-sm-9">
                     <label class="form-inline" style="font-weight:normal; margin-right: 1.5em">
