Update home page and site map absed on top 100 songs post

--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Home Page";
     ViewBag.Canonical = "https://www.music4dance.net";
-    ViewBag.Description = "music4dance.net is an online music catalog, tools and educational resources to help Ballroom, Salsa, Swing, Tango and other dancers find fun and exiting music.";
+    ViewBag.Description = "music4dance.net is an online music catalog, tool and educational resource to help Ballroom, Salsa, Swing, Tango and other dancers find fun and exiting music.";
 
     var dances = new[]
     {
@@ -179,4 +179,6 @@
     <p class="neutral">I have been adding capabilities to the music4dance advanced search control as they are suggested and as time permits.  And it got a bit out of control, so to speak... <a href="https://www.music4dance.net/blog/searching-for-music-to-dance-to-just-got-a-whole-lot-easier/">[Read more]</a></p>
     <h4 class="blog">Are there songs that you never want to dance to again?</h4>
     <p class="neutral">I know for me there are a few songs that I spent way too much time listening to while learning choreography or cutting medleys.  I never want to hear them again... <a href="https://www.music4dance.net/blog/are-there-songs-that-you-never-want-to-dance-to-again/">[Read more]</a></p>
+    <h4 class="blog">Top Songs of 2015 --  And what to dance to them.</h4>
+    <p class="neutral">What better than a top 100 list to end the year? I've taken the <a href="https://open.spotify.com/user/spotifyyearinmusic/playlist/55tXTZZg4Xtk0BA3kPoJ1s">Spotify top 100 songs of 2015 (for the USA)</a> and ... <a href="https://www.music4dance.net/blog/top-songs-of-2015-and-what-to-dance-to-them/">[Read more]</a></p>
 </div>
