--- a/DanceCalc/m4d/Views/Home/SiteMap.cshtml
+++ b/DanceCalc/m4d/Views/Home/SiteMap.cshtml
@@ -56,8 +56,9 @@
                     <li><a href="https://www.music4dance.net/blog/i-am-learning-the-foxtrot-where-can-i-find-some-music/">I am learning the Foxtrot, where can I find some music?</a></li>
                     <li><a href="">https://www.music4dance.net/blog/searching-for-music-to-dance-to-just-got-a-whole-lot-easier/</a> Searching for mucis to dance to just got a whole lot easier</li>
                     <li><a href="https://www.music4dance.net/blog/are-there-songs-that-you-never-want-to-dance-to-again/"></a>Are there songs that you never want to dance to again?</li>
+                    <li><a href="https://www.music4dance.net/blog/top-songs-of-2015-and-what-to-dance-to-them/"></a>Top Songs of 2015 --  And what to dance to them.</li>
                     <!--<li><a href=""></a></li>-->
-                    @*Last updated 12/7/15*@
+                    @*Last updated 12/30/15*@
                 </ul>
             </li>
             <li><a href="/home/contact">Contact</a></li>
