--- a/DanceCalc/m4d/Views/Song/Index.cshtml
+++ b/DanceCalc/m4d/Views/Song/Index.cshtml
@@ -15,6 +15,13 @@
     var dances = (IList<SongCounts>)ViewBag.Dances;
 }
 
+@helper Spotify()
+{
+    <div id="spotify-player" class="col-md-6" data-trackset-name="music4dance" data-trackset-songs="@string.Join(",", Model.Select(s => s.SongId))">
+        <button class="btn-default btn-block btn-lg">Show Spotify Player</button>
+    </div>
+}
+
 @Html.Partial("ItemTags")
 
 @if (string.Equals(filter.Action, "advanced", StringComparison.OrdinalIgnoreCase))
@@ -137,13 +144,13 @@ else
 @if (string.Equals(filter.Action, "advanced", StringComparison.OrdinalIgnoreCase))
     {
     <div class="row">
-        <div id="spotify-player" class="col-md-6" data-trackset-name="music4dance" data-trackset-songs="@string.Join(",", Model.Select(s => s.SongId))"></div>
+        @Spotify()
     </div>
 }
 else
 {
     <div class="row">
-        <div id="spotify-player" class="col-md-6" data-trackset-name="music4dance" data-trackset-songs="@string.Join(",", Model.Select(s => s.SongId))"></div>
+        @Spotify()
         <div class="col-md-6"><h4>@description</h4></div>
     </div>
 }
