--- a/DanceCalc/m4d/Content/bootstrap/m4d-custom.less
+++ b/DanceCalc/m4d/Content/bootstrap/m4d-custom.less
@@ -212,7 +212,7 @@ a.text-other:hover,
     border-color: #26a695;
 }
 
-.btn-tempo, .btn-tempo:focus, .btn-tempo:hover {
+.btn-help, btn-help:focus, .btn-help:hover .btn-tempo, .btn-tempo:focus, .btn-tempo:hover {
     color: #ffffff;
     background-color: #001671;
     border-color: #000b39;
