Got both the email and feedback form links onto the error page

--- a/DanceCalc/m4d/Views/Home/FAQ.cshtml
+++ b/DanceCalc/m4d/Views/Home/FAQ.cshtml
@@ -59,7 +59,7 @@
                     </div>
                     <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
                         <div class="panel-body">
-                            <p class="neutral">Send email to <a href="mailto:info@music4dance.net">info@music4dance.net</a> and we will try to add it! Feel free to give us any other feedback you might have as well.</p>
+                            <p class="neutral">Contact us at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or through our <a href="https://www.music4dance.net/blog/feedback/">feedback form</a> and we will try to add it! Feel free to give us any other feedback you might have as well.</p>
                         </div>
                     </div>
                 </div>
