--- a/DanceCalc/m4d/Views/Shared/HttpError.cshtml
+++ b/DanceCalc/m4d/Views/Shared/HttpError.cshtml
@@ -35,7 +35,7 @@
         <li>Try our <a href="https://www.music4dance.net/song">songs page</a> if you're looking for dance information about a particular song or artist.</li>
         <li>Try our <a href="https://www.music4dance.net/blog">blog</a> if you're looking for information about relating music to dance.</li>
         <li>Try our <a href="https://www.music4dance.net/home/sitemap">site map</a> or our <a href="https://www.music4dance.net/home">home page</a> if you want to see what we have to offer.</li>
-        <li>If all else fails please <a href="mailto:info@music4dance.net"> send us an email</a> and let us know what went wrong.</li>
+        <li>If all else fails please Contact us at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or through our <a href="https://www.music4dance.net/blog/feedback/">feedback form</a> and let us know what went wrong.</li>
     </ul>
 </div>
 
