Create bot-friendly stubs for search results (more attemtp to remove load from the SQL database).

--- a/DanceCalc/m4d/Views/Shared/BotWarning.cshtml
+++ b/DanceCalc/m4d/Views/Shared/BotWarning.cshtml
@@ -2,10 +2,10 @@
     ViewBag.Title = "Search Robot Warning";
 }
 
-<h2>Search Robot Warning</h2>
+<h1>@ViewBag.Title</h1>
 
 <p>Hi, you appear to be a spider or search robot of some kind that is overtaxing this site's capacity to serve up useful information.</p>
-<p>If you are a real person, then our developer messed up this filter and we'd realy like to know. Please email us at the email address "info" followed by the "at" sign this site's domain name (remember, trying to avoid bots) and let us know how you found this page.</p>
+<p>If you are a real person, then our developer messed up this filter and we'd realy like to know. Please email us at the email address "info" followed by the "at" sign and this site's domain name (remember, trying to avoid bots) and let us know how you found this page.</p>
 <p>Thanks - the music4dance team.</p>
 
 
