Quick and dirty JSON serializer for small sets of songs

--- a/DanceCalc/m4d/Views/Song/SetupSongScript.cshtml
+++ b/DanceCalc/m4d/Views/Song/SetupSongScript.cshtml
@@ -8,19 +8,8 @@
         <script> var paramNumerator = @ViewBag.paramNumerator; </script>
     }
 
-    var stream = new MemoryStream();
-    var serializer = new DataContractJsonSerializer(typeof(SongDetails));
-    serializer.WriteObject(stream, Model);
-    var songString = System.Text.Encoding.UTF8.GetString(stream.ToArray());
-
-    string filterString = null;
-    if (ViewData.ContainsKey("SongFilter"))
-    {
-        stream = new MemoryStream();
-        serializer = new DataContractJsonSerializer(typeof(SongFilter));
-        serializer.WriteObject(stream, ViewBag.SongFilter);
-        filterString = System.Text.Encoding.UTF8.GetString(stream.ToArray());
-    }
+    var songString = Model.ToJson();
+    var filterString = ViewData.ContainsKey("SongFilter") ? ViewBag.SongFilter.ToJson() : null;
 
     @ScriptHelper.Parameter(ViewData, "NewTempo")
     @ScriptHelper.Parameter(ViewData, "ShowMPM")
