--- a/DanceCalc/m4d/Views/Admin/InitializationTasks.cshtml
+++ b/DanceCalc/m4d/Views/Admin/InitializationTasks.cshtml
@@ -29,7 +29,8 @@
     <li>@Html.ActionLink("Remove Lookup History", "CleanLookupHistory")</li>
     <li>@Html.ActionLink("Fix up Zero Times", "FixZeroTime")</li>
     <li>@Html.ActionLink("Times from Properties", "TimesFromProperties")</li>
-    <li>@Html.ActionLink("Times from Properties: Recent Batch", "TimesFromProperties", new {exclude="batch", from= (DateTime.Now - new TimeSpan(1, 0, 0, 0)).ToShortDateString()}, null)</li>
+    <li>@Html.ActionLink("Times from Properties: Batch", "TimesFromProperties", new { exclude = "batch|batch-i|batch-s|batch-a|batch-x|batch-e" }, null)</li>
+    <li>@Html.ActionLink("Times from Properties: Recent Batch", "TimesFromProperties", new {exclude="batch|batch-i|batch-s|batch-a|batch-x|batch-e", from= (DateTime.Now - new TimeSpan(1, 0, 0, 0)).ToShortDateString()}, null)</li>
     @*<li>@Html.ActionLink("Add Dance Groups", "AddDanceGroups")</li>
         <li>@Html.ActionLink("Clean Tags", "CleanTags")</li>*@
     <li>@Html.ActionLink("Infer Dance Types", "InferDanceTypes")</li>
