--- a/DanceCalc/m4d/Views/Shared/_ListSongs.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_ListSongs.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Data.SqlTypes
-@using DanceLibrary
+﻿@using DanceLibrary
 @model IEnumerable<SongBase>
 
 @{
@@ -14,12 +13,14 @@
     var songOrder = new SongSort(ViewBag.SongFilter.SortOrder);
     var showDate = canSort;
     SongFilter filter = ViewData.ContainsKey("SongFilter") ? ViewBag.SongFilter : new SongFilter();
-    Dictionary<Guid, bool?> likes = ViewData.ContainsKey("Likes") ? ViewBag.Likes : null;
-    var activeLikes = (likes == null) ? string.Empty : "toggle-like";
+    var danceId = ViewData.ContainsKey("DanceId") ? ViewBag.DanceId : null;
+    var danceName = (danceId == null) ? null : danceMap[danceId].DanceName;
+    LikeDictionary likes = ViewData.ContainsKey("Likes") ? ViewBag.Likes : null;
+    LikeDictionary danceLikes = ViewData.ContainsKey("DanceLikes") ? ViewBag.DanceLikes : null;
 
-    const string heartTipNull = "Click to like/dislike this song.";
-    const string heartTipTrue = "You have liked this song, click to dislike";
-    const string heartTipFalse = "You have disliked this song, click to reset";
+    const string likeTipNull = "Click to like/dislike {0}.";
+    const string likeTipTrue = "You have liked {0}, click to dislike";
+    const string likeTipFalse = "You have disliked {0}, click to reset";
 }
 
 @helper ArtistHeader(bool canSort, SongSort songOrder, SongFilter filter)
@@ -31,7 +32,7 @@
     }
     else
     {
-        <text>Artist</text>
+        <text> Artist </text>
     }
 }
 
@@ -53,10 +54,10 @@
         var exc = tags.ExtractRemove();
         if (!inc.IsEmpty)
         {
-            <br /><span>Included:</span>
+            <br /><span> Included:</span>
             foreach (var tag in inc.Tags)
             {
-                if (!tag.Contains(':')) {continue;}
+                if (!tag.Contains(':')) { continue; }
 
                 var rg = tag.Split(':');
                 var url = "/song/removetags?tags=" + WebUtility.UrlEncode(tag) + "&filter=" + WebUtility.UrlEncode(filter.ToString());
@@ -77,7 +78,7 @@
     }
 }
 
-@helper Tags(SongBase song, SongFilter filter) 
+@helper Tags(SongBase song, SongFilter filter)
 {
     foreach (var titem in song.TagSummary.Tags.Where(t => !string.Equals(t.TagClass, "dance", StringComparison.OrdinalIgnoreCase)))
     {
@@ -94,7 +95,7 @@
     var timeMessage = prefix + " on " + time.ToString("g") + " (" + delta + " ago)";
 
     <td class="hidden-xs" data-toggle="tooltip" data-placement="left" title="@timeMessage">
-        @(created ? @song.CreatedOrder : @song.ModifiedOrder)
+        @(created? @song.CreatedOrder : @song.ModifiedOrder)
     </td>
 }
 
@@ -102,26 +103,69 @@
 {
     if (string.IsNullOrEmpty(song.Purchase) || !song.Purchase.Contains(id))
     {
-        return;
+    return;
     }
 
-    var buttonId = string.Format("{0}{1}",id,song.SongId);
-    var link = string.Format("~/Content/{0}-logo.png",logo);
-    <li><a href="#" id="@buttonId" class="play-link"><img src="@Url.Content(link)" alt="@help" width="20" height="20" /> @title</a></li>
+    var buttonId = string.Format("{0}{1}", id, song.SongId);
+    var link = string.Format("~/Content/{0}-logo.png", logo);
+    <li ><a href = "#" id = "@buttonId" class="play-link"><img src="@Url.Content(link)" alt="@help" width="20" height="20" /> @title</a></li>
 }
 
+@helper LikeHelper(SongBase song, LikeDictionary likes, string img, string modifier, string danceId, string tipNull, string tipTrue, string tipFalse)
+{
+    bool? like;
+    if (likes == null || !likes.TryGetValue(song.SongId, out like))
+    {
+        like = null;
+    }
+    var heart = "outline-";
+    var heartAlt = "No Opinion";
+    var heartTip = string.Format(tipNull, modifier);
+    var href = "#";
+    var state = "null";
+
+    if (likes == null)
+    {
+        heartTip = "Sign In to like/dislike {0}.";
+        href = "/account/signin?ReturnUrl=" + Request.Url;
+    }
+    else if (like.HasValue)
+    {
+        if (like.Value)
+        {
+            heart = string.Empty;
+            state = "true";
+            heartAlt = "Like";
+            heartTip = tipTrue;
+        }
+        else
+        {
+            heart = "broken-";
+            state = "false";
+            heartAlt = "Dislike";
+            heartTip = tipFalse;
+        }
+    }
+
+    var type = danceId ?? "like";
+    <a id = "@type.@song.SongId" class="btn btn-sm btn-info @(likes == null ? string.Empty : "toggle-like")" style="padding:3px" role="button" href="@href" data-like="@state" data-toggle="tooltip" data-placement="right" title="@string.Format(heartTip,modifier)">
+        <img src='@Url.Content(string.Format("~/Content/{0}-{1}icon.png",img, heart))' alt="@heartAlt" />
+    </a>
+}
+
+
 <script>
-    window.HeartOptions = {
-        'true': { tip: '@heartTipTrue', img: '' },
-        'false': { tip: '@heartTipFalse', img: '-broken' },
-        'null': {tip: '@heartTipNull', img: '-outline'}
+    window.VoteOptions = {
+        'true': { tip: '@likeTipTrue', img: '' },
+        'false': { tip: '@likeTipFalse', img: '-broken' },
+        'null': { tip: '@likeTipNull', img: '-outline' }
     };
 </script>
 
 <table class="table table-striped table-songs">
     <thead>
     <tr>
-        <th style="width:75px">Like/Play</th>
+        <th style="width:@(danceId==null?"75":"120")px">Like/Play</th>
 
         @if (isAdmin)
         {
@@ -256,44 +300,11 @@
             <tr>
                 <td>
                     @{
-                        bool? like;
-                        if (likes == null || !likes.TryGetValue(item.SongId, out like))
+                        if (danceId != null)
                         {
-                            like = null;
+                            @LikeHelper(item, danceLikes, "dance", "dancing " + danceName + " to this song", danceId, likeTipNull, likeTipTrue, likeTipFalse);
                         }
-                        var heart = "outline-";
-                        var heartAlt = "No Opinion";
-                        var heartTip = heartTipNull;
-                        var href = "#";
-                        var state = "null";
-
-                        if (likes == null)
-                        {
-                            heartTip = "Sign In to like/dislike songs.";
-                            href = "/account/signin?ReturnUrl=" + Request.Url;
-                        }
-                        else if (like.HasValue)
-                        {
-                            if (like.Value)
-                            {
-                                heart = string.Empty;
-                                state = "true";
-                                heartAlt = "Like";
-                                heartTip = heartTipTrue;
-                            }
-                            else
-                            {
-                                heart = "broken-";
-                                state = "false";
-                                heartAlt = "Dislike";
-                                heartTip = heartTipFalse;
-                            }
-                        }
-                        var heartImg = string.Format("~/Content/heart-{0}icon.png", heart);
-
-                        <a id="like.@item.SongId" class="btn btn-sm btn-info @activeLikes" style="padding:3px" role="button" href="@href" data-like="@state" data-toggle="tooltip" data-placement="right" title="@heartTip">
-                            <img src='@Url.Content(heartImg)' alt="@heartAlt"/>
-                        </a>
+                        @LikeHelper(item, likes, "heart", "this song", "like", likeTipNull, likeTipTrue, likeTipFalse);
                         if (!string.IsNullOrWhiteSpace(item.Purchase))
                         {
                             var id = "Play" + item.SongId;
