Enabled the basics for saving searches.  All searches are auto-saved and My Searches page allows user to see there top 100 most recent & most popular searches.  Many other possibilities around this, but that gets us the basic saved search capability.

--- a/DanceCalc/m4d/Views/Shared/_LoginPartial.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_LoginPartial.cshtml
@@ -14,6 +14,7 @@
                     <li>@Html.ActionLink("My Profile", "UserProfile", "Manage")</li>
                     <li>@Html.ActionLink("Account Settings", "Settings", "Manage")</li>
                     <li>@Html.ActionLink("My Songs", "FilterUser", "Song", new { user = @User.Identity.GetUserName() }, null)</li>
+                    <li>@Html.ActionLink("My Searches", "Index", "Searches", new { user = @User.Identity.GetUserName() }, null)</li>
                     <li><a href="javascript:document.getElementById('logoutForm').submit()">Sign off</a></li>
                 </ul>
             </li>
