--- a/DanceCalc/m4d/Views/Admin/UploadBackup.cshtml
+++ b/DanceCalc/m4d/Views/Admin/UploadBackup.cshtml
@@ -70,7 +70,7 @@
 
     <hr />
     <h2>Backups</h2>
-    <li>@Html.ActionLink("Backup the Database", "BackupDatabase"), @Html.ActionLink("Users", "BackupDatabase", new { tags = false, dances = false, songs = false }), @Html.ActionLink("Dances", "BackupDatabase", new { tags = false, users = false, songs = false }), @Html.ActionLink("Tags", "BackupDatabase", new { tags = true, dances = false, users = false, songs = false })</li>
+    <li>@Html.ActionLink("Backup the Database", "BackupDatabase"), @Html.ActionLink("Users", "BackupDatabase", new { tags = false, dances = false, songs = false, searches = false }), @Html.ActionLink("Dances", "BackupDatabase", new { tags = false, users = false, songs = false, searches = false }), @Html.ActionLink("Tags", "BackupDatabase", new { dances = false, users = false, searches = false, songs = false }), @Html.ActionLink("Searches", "BackupDatabase", new { tags = false, dances = false, users = false, songs = false })</li>
     <li>@Html.ActionLink("Backup the Database (with lookup history)", "BackupDatabase", new { useLookupHistory = "true" })</li>
     <li>@Html.ActionLink("Backup tail", "BackupTail", new { count = 150 })</li>
     <li>@Html.ActionLink("Backup tail (500)", "BackupTail", new { count = 500 })</li>
