--- a/DanceCalc/m4d/Views/Song/Dances.cshtml
+++ b/DanceCalc/m4d/Views/Song/Dances.cshtml
@@ -9,8 +9,8 @@
                 <a data-bind="attr: {href: link}, text: DanceName, css:danceTag"></a>
             </span>
             &nbsp;
-            <a role="button" class="label label-default" data-show="tooltip" data-placement="top" data-bind="attr: {'data-original-title':liketip},  visible:canTag"><img data-bind="click:toggleVote, attr: {src:voteImage, 'alt':voteName}" /></a>
-            <span data-bind="template: {name:'tag-template',foreach:TagSummary.tagTypes}"></span>
+            <a role="button" class="btn btn-small btn-info" style="padding:2px" data-show="tooltip" data-placement="top" data-bind="attr: {'data-original-title':liketip},  visible:canTag"><img data-bind="click:toggleVote, attr: {src:voteImage, 'alt':voteName}" /></a>
+            <span style="font-size:18px" data-bind="template: {name:'tag-template',foreach:TagSummary.tagTypes}"></span>
         </li>
     </ul>
 
