Small updates to sitemap + Add a couple of places where saved searches are accessible (on advanced search form and basic search).
Also make default for contact info be surveys/email/direct promotion

--- a/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
+++ b/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
@@ -58,6 +58,9 @@
             Signed In
         </th>
         <th>
+            CNT
+        </th>
+        <th>
             Roles
         </th>
         <th>
@@ -127,6 +130,9 @@
                 @item.LastActive.ToString("d")
             }
 
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CanContact)
         </td>
         <td>
             @string.Join(",",Model.GetRoles(item.Id))
