--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -181,4 +181,6 @@
     <p class="neutral">I know for me there are a few songs that I spent way too much time listening to while learning choreography or cutting medleys.  I never want to hear them again... <a href="https://www.music4dance.net/blog/are-there-songs-that-you-never-want-to-dance-to-again/">[Read more]</a></p>
     <h4 class="blog">Top Songs of 2015 --  And what to dance to them.</h4>
     <p class="neutral">What better than a top 100 list to end the year? I've taken the <a href="https://open.spotify.com/user/spotifyyearinmusic/playlist/55tXTZZg4Xtk0BA3kPoJ1s">Spotify top 100 songs of 2015 (for the USA)</a> and ... <a href="https://www.music4dance.net/blog/top-songs-of-2015-and-what-to-dance-to-them/">[Read more]</a></p>
+    <h4 class="blog">If you like to dance Cha-Cha to a song does that mean you “like” that song?</h4>
+    <p class="neutral">I wanted to build a system where dancers could vote on... But then Amanda (the music4dance intern) pointed out...<a href="https://www.music4dance.net/blog/if-you-like-to-dance-cha-cha-to-a-song-does-that-mean-you-like-that-song/">[Read more]</a></p>
 </div>
