--- a/DanceCalc/m4d/Views/Home/SiteMap.cshtml
+++ b/DanceCalc/m4d/Views/Home/SiteMap.cshtml
@@ -8,8 +8,14 @@
 
 <div class="row">
     <div class="music col-sm-3" >
-        <h2>Dances</h2>
+        <h2>Music & Dances</h2>
         <ul>
+            <li><a href="/song" class="music">Song Library</a></li>
+            <ul>
+                <li><a href="/song/advancedsearchform" class="music">Advanced Search</a></li>
+                <li><a href="/searches/index" class="music">Saved Searches</a></li>
+            </ul>
+            <li><a href="/dances" class="music">Dance Index</a></li>
             <li><a href="/dances" class="music">Dance Index</a></li>
             <li><a href="/dances/ballroom-competition-categories" class="music">Ballroom Competition Categories</a>
                 <ul>
@@ -54,9 +60,10 @@
                     <li><a href="https://www.music4dance.net/blog/what-if-i-want-to-build-a-list-of-songs-that-are-tagged-as-either-bolero-or-rumba/">What if I want to build a list of songs that are tagged as either Bolero or Rumba?</a></li>
                     <li><a href="https://www.music4dance.net/blog/lets-tag-some-songs/">Let's tag some songs!</a></li>
                     <li><a href="https://www.music4dance.net/blog/i-am-learning-the-foxtrot-where-can-i-find-some-music/">I am learning the Foxtrot, where can I find some music?</a></li>
-                    <li><a href="">https://www.music4dance.net/blog/searching-for-music-to-dance-to-just-got-a-whole-lot-easier/</a> Searching for mucis to dance to just got a whole lot easier</li>
+                    <li><a href="https://www.music4dance.net/blog/searching-for-music-to-dance-to-just-got-a-whole-lot-easier/">Searching for mucis to dance to just got a whole lot easier</a></li>
                     <li><a href="https://www.music4dance.net/blog/are-there-songs-that-you-never-want-to-dance-to-again/"></a>Are there songs that you never want to dance to again?</li>
                     <li><a href="https://www.music4dance.net/blog/top-songs-of-2015-and-what-to-dance-to-them/"></a>Top Songs of 2015 --  And what to dance to them.</li>
+                    <li><a href="https://www.music4dance.net/blog/if-you-like-to-dance-cha-cha-to-a-song-does-that-mean-you-like-that-song/"></a>If you like to dance Cha-Cha to a song does that mean you “like” that song?</li>
                     <!--<li><a href=""></a></li>-->
                     @*Last updated 12/30/15*@
                 </ul>
@@ -73,6 +80,13 @@
         <ul>
             <li><a href="/home/counter" class="tools">Dance Counter</a>: Count out the tempo of a song and see a list of dances that can be danced at that tempo.</li>
             <li><a href="/home/tempi" class="tools">Dance Tempi</a>: Table of ballroom and social dances organized by tempo.</li>
+        </ul>
+        <h2>Account</h2>
+        <ul>
+            <li><a href="/manage/userprofile" class="tools">Profile</a></li>
+            <li><a href="/manage/settings" class="tools">Settings</a></li>
+            <li><a href="/account/signin" class="tools">Sign In</a></li>
+            <li><a href="/account/signup" class="tools">Sign Up</a></li>
         </ul>
     </div>
 </div>
