--- a/DanceCalc/m4d/Views/Searches/Index.cshtml
+++ b/DanceCalc/m4d/Views/Searches/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewBag.Title = "My Searches";
+    SongFilter filter = ViewData.ContainsKey("SongFilter") ? ViewBag.SongFilter : SongFilter.Default;    
     var admin = User.IsInRole("showDiagnostics");
     var showDetails = ViewData.ContainsKey("ShowDetails") ? ViewBag.ShowDetails : false;
     var sort = ViewData.ContainsKey("Sort") ? ViewBag.Sort : "";
@@ -13,71 +14,79 @@
         recentActive = string.Empty;
         popularActive = "disabled btn-primary";
     }
+    var userName = User.Identity.Name; 
 }
 
 <h1>@ViewBag.Title</h1>
 
-<div class="btn-group btn-group-justified" role="group" aria-label="...">
-    @Html.ActionLink("Most Popular", "Index", "Searches", new { showDetails, user = @User.Identity.GetUserName() }, new {role="button", @class= "btn btn-default " + recentActive})
-    @Html.ActionLink("Most Recent", "Index", "Searches", new { showDetails, user = @User.Identity.GetUserName(), sort="recent" }, new { role = "button", @class = "btn btn-default " + popularActive})
+<div class="row">
+    <p class="col-xs-6">  @Html.ActionLink("Basic Search", "index", "song", new {user=@userName} , new { id = "saved-search" })</p>
+    <p class="col-xs-6" style="text-align: right; padding-right:20px">@Html.ActionLink("Advanced Search", "advancedsearchform", "song", new{filter} , new { id = "advanced-search" })</p>
+</div>        
+
+<div class="row" style="margin-bottom:10px">
+    <div class="btn-group btn-group-justified col-xs-12" role="group" aria-label="...">
+        @Html.ActionLink("Most Popular", "Index", "Searches", new { showDetails, user = @User.Identity.GetUserName(), filter }, new {role="button", @class= "btn btn-default " + recentActive})
+        @Html.ActionLink("Most Recent", "Index", "Searches", new { showDetails, user = @User.Identity.GetUserName(), sort="recent", filter }, new { role = "button", @class = "btn btn-default " + popularActive})
+    </div>
 </div>
 
-<div style="height: 10px"></div>
+<div class="row">
+    <table class="table table-striped table-songs col-xs-12">
+    @if (showDetails)
+    {
+        <tr>
+            <th>
+                Search
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Query)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Count)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Created)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Modified)
+            </th>
+        </tr>
+    }
 
-<table class="table table-striped table-songs">
-@if (showDetails)
-{
-    <tr>
-        <th>
-            Search
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Query)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Count)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Created)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Modified)
-        </th>
-    </tr>
-}
-
-@foreach (var item in Model)
-{
-    var filter = @item.Filter;
-    filter.Action = "Advanced";
-    <tr>
-        <td>
-            @Html.ActionLink(@item.Filter.Description, "Index", "Song", new { filter }, null)
-        </td>
-        @if (showDetails)
-        {
+    @foreach (var item in Model)
+    {
+        var t = @item.Filter;
+        t.Action = "Advanced";
+        <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Query)
+                @Html.ActionLink(@t.Description, "Index", "Song", new { filter }, null)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Count)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Created)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Modified)
-            </td>
-        }
-    </tr>
-}
-</table>
+            @if (showDetails)
+            {
+                <td>
+                    @Html.DisplayFor(modelItem => item.Query)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Count)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Created)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Modified)
+                </td>
+            }
+        </tr>
+    }
+    </table>
+</div>
 
 @if (admin)
 {
